# mcp-server-nextgen

./: .gitignore  LICENSE  README.md  pyproject.toml  workqueues.csv
src/mcp_server_nextgen/: server.py
