[project]
name = "mcp-server-nextgen"
version = "0.1.0"
description = "MCP server to connect to SS&C | Blue Prism® Next Generation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.8.1",                 
    "mcp[cli]>=1.6.0",                
    "oauthlib>=3.2.2",               
    "requests>=2.28",               
    "requests-oauthlib>=1.3.1", 
]

[project.scripts]
mcp-server-nextgen = "mcp_server_nextgen:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0", 
    "pytest-asyncio>=0.17"
]
